--- a/CrucigramaFX/bin/Vista/vistaSeleccionNiveles.fxml
+++ b/CrucigramaFX/bin/Vista/vistaSeleccionNiveles.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="ventana1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="471.0" prefWidth="549.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SeleccionNivelesController">
+<AnchorPane fx:id="ventana1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="471.0" prefWidth="549.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.PartidaController">
    <children>
       <Button fx:id="botonFacil" alignment="TOP_CENTER" ellipsisString="" layoutX="48.0" layoutY="246.0" mnemonicParsing="false" onAction="#iniciarTablero4x4" prefHeight="95.0" prefWidth="135.0" text="4 X 4">
          <font>
