--- a/CrucigramaFX/src/Vista/vistaCuadricula4x4.fxml
+++ b/CrucigramaFX/src/Vista/vistaCuadricula4x4.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="ventanaCuatro" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="471.0" prefWidth="549.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.CuadriculasController">
+<Pane fx:id="ventanaCuatro" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="471.0" prefWidth="549.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.CrucigramaController">
    <children>
       <Button fx:id="botonStop" layoutX="313.0" layoutY="45.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="STOP" />
       <Text fx:id="nivelFacil" layoutX="14.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fácil">
